# ProSE_CICD

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties
CMakeModules/: CodeCoverage.cmake
doc/: doxygen
src/: account.c  account.h  bank_database.c  bank_database.h  consumers.c  main.c  package.c  package.h
src/files/: example.c  example.h
src/package/: package.c  package.h
test/: mainTest.c  packageTest.c
test/cmocka/: Makefile  cmake_install.cmake  cmocka.h  libcmocka.so.0.7.0
test/files/: exampleTest.c
test/package/: packageTest.c
